Despliegue en railway